Java.security doesn't strip PEM headers and decode base64, w/ unit test